# Maimi-Website-Map

./: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  testing_stuff.py  vite.config.ts
BackEndNotifications/server/: Cargo.toml  redirect_script.py
BackEndNotifications/server/src/: database.rs  main.rs  musiums.rs
BackEndNotifications/testing-push/: Cargo.toml  mussage.json  payload.json  private_key.pem
BackEndNotifications/testing-push/src/: get_data_from_lib.rs  main.rs  museum.rs  nof.rs  push_notif.rs
src/: app.css  app.html  service-worker.js
src/lib/: preload.ts
src/lib/SvelteStuff/: ButtonToggle.svelte  CleanData.svelte  DarkModeButton.svelte  DetectDarkReader.svelte  DrawerComponent.svelte  Dropdown.svelte  FetchStore.svelte  GiveMeMoney.svelte  Header.svelte  LandingPage.svelte  Map.svelte  RenderComponent.svelte
src/lib/SvelteStuff/DebugStuff/: RenderComponent.svelte
src/lib/SvelteStuff/HeaderRewrite/: Dropdown.svelte  Header.svelte  ListButton.svelte  LoadButton.svelte  THinking.md
src/lib/SvelteStuff/HeaderRewrite/SettingButtonStuff/: SettingInternal.svelte  SettingsButton.svelte
src/lib/SvelteStuff/ListStuff/: ListContainer.svelte
src/lib/json/: branches_to_adresses.json
src/lib/shared/: stores.ts
src/lib/wasm-lib/: Cargo.toml  merged_data.json
src/lib/wasm-lib/src/: lib.rs  testing.py
src/lib/wasm-lib/src/get_mus/: Cargo.toml  main.rs
src/routes/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/header-test/: +page.svelte
src/routes/reg/: +page.svelte
src/routes/test/: +page.svelte
src/routes/welcome/: +page.svelte
static/: AppIcon.xcf  manifest.json
static/jsFiles/: button.js
