[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
futures = "0.3.30"
pocketbase-sdk = "0.1.1"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version =  "1.35.1", features = ["full"] }

[[bin]]
name = "database"
path = "src/database.rs"

