[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Prudhvi Boggavarapu <codingpabs@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fuzzy-matcher = "0.3.7"
serde = {version = "1.0.193", features = ["derive"]}
web-sys = {version = "0.3.66", features = ["console"]}
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3.39"


[[bin]]
name = "get_mus"
path = "src/get_mus/main.rs"



